[gd_scene load_steps=3 format=2]

[ext_resource path="res://background_.jpg" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512.5, 300.5 )
scale = Vector2( 0.533854, 0.493897 )
texture = ExtResource( 1 )

[node name="nome" type="LineEdit" parent="."]
margin_left = 573.0
margin_top = 267.0
margin_right = 725.0
margin_bottom = 291.0
__meta__ = {
"_editor_description_": ""
}

[node name="numero" type="LineEdit" parent="."]
margin_left = 294.0
margin_top = 265.0
margin_right = 446.0
margin_bottom = 289.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0.0117647, 0.00392157, 0.00392157, 1 )
margin_left = 294.0
margin_top = 326.0
margin_right = 442.0
margin_bottom = 342.0
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
modulate = Color( 0.0117647, 0.00392157, 0.00392157, 1 )
margin_left = 583.0
margin_top = 329.0
margin_right = 731.0
margin_bottom = 345.0
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 336.0
margin_top = 361.0
margin_right = 403.0
margin_bottom = 411.0
text = "CLIQUE"

[node name="Button2" type="Button" parent="."]
margin_left = 615.0
margin_top = 362.0
margin_right = 682.0
margin_bottom = 412.0
text = "CLIQUE"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
